[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/fonts/Lato-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/gui/default.theme" type="Theme" id=2]
[ext_resource path="res://src/gui/settings_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=24]
font_path = "res://src/gui/gozo.ttf"

[sub_resource type="DynamicFont" id=22]
size = 24
font_data = SubResource( 24 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFontData" id=25]
font_path = "res://src/gui/gozo.ttf"

[sub_resource type="DynamicFont" id=23]
size = 48
font_data = SubResource( 25 )

[sub_resource type="DynamicFontData" id=27]
antialiased = false
font_path = "res://src/gui/gozo.ttf"

[sub_resource type="DynamicFont" id=16]
font_data = SubResource( 27 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.129412, 0.129412, 1, 1 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 6
border_width_right = 6
border_color = Color( 0.396078, 0.396078, 0.396078, 1 )
border_blend = true
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_right = 4
border_color = Color( 0.396078, 0.396078, 0.396078, 1 )
border_blend = true

[sub_resource type="DynamicFontData" id=30]
antialiased = false
font_path = "res://src/gui/gozo.ttf"

[sub_resource type="DynamicFont" id=31]
size = 6
font_data = SubResource( 30 )

[sub_resource type="DynamicFont" id=32]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=33]
default_font = SubResource( 32 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
Button/colors/font_color_hover = Color( 0.498039, 1, 0, 1 )
Button/colors/font_color_pressed = Color( 0.941176, 0.235294, 0.47451, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 22 )
Button/styles/disabled = SubResource( 7 )
Button/styles/focus = SubResource( 8 )
Button/styles/hover = SubResource( 9 )
Button/styles/normal = SubResource( 10 )
Button/styles/pressed = SubResource( 11 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 23 )
Label/styles/normal = null
TabContainer/fonts/font = SubResource( 16 )
TabContainer/styles/panel = SubResource( 26 )
TabContainer/styles/tab_bg = SubResource( 28 )
TabContainer/styles/tab_fg = SubResource( 29 )
Tabs/fonts/font = SubResource( 31 )

[node name="SettingsMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -477.5
margin_top = -280.0
margin_right = 477.5
margin_bottom = 280.0
rect_min_size = Vector2( 955, 560 )
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -477.5
margin_top = -280.0
margin_right = 477.5
margin_bottom = 280.0
rect_min_size = Vector2( 955, 560 )
color = Color( 0.498039, 1, 0, 1 )

[node name="SettingTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="Video" type="Tabs" parent="SettingTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 26.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 33 )
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VideoSettings" type="GridContainer" parent="SettingTabs/Video/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 930.0
margin_bottom = 509.0
custom_constants/vseparation = 20
columns = 2

[node name="DisplayModeLabel" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_right = 297.0
margin_bottom = 48.0
text = "Display Mode"

[node name="DisplayOptionBtn" type="OptionButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 779.0
margin_right = 905.0
margin_bottom = 48.0
size_flags_horizontal = 10
theme = ExtResource( 2 )
text = "Windowed"
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="VsyncLabel" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 68.0
margin_right = 297.0
margin_bottom = 116.0
text = "Vsync"

[node name="VsyncBtn" type="CheckButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 841.0
margin_top = 68.0
margin_right = 905.0
margin_bottom = 116.0
size_flags_horizontal = 10

[node name="DisplayFpsLabel" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 136.0
margin_right = 297.0
margin_bottom = 184.0
text = "Display FPS"

[node name="DisplayFpsBtn" type="CheckButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 841.0
margin_top = 136.0
margin_right = 905.0
margin_bottom = 184.0
size_flags_horizontal = 10

[node name="MaxFpsLabel" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 204.0
margin_right = 297.0
margin_bottom = 252.0
text = "Max FPS"

[node name="BloomHBoxContainer" type="HBoxContainer" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 405.0
margin_top = 204.0
margin_right = 905.0
margin_bottom = 252.0
size_flags_horizontal = 10

[node name="MaxFpsVal" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings/BloomHBoxContainer"]
margin_right = 96.0
margin_bottom = 48.0
text = "Max"

[node name="MaxFpsSlider" type="HSlider" parent="SettingTabs/Video/MarginContainer/VideoSettings/BloomHBoxContainer"]
margin_left = 100.0
margin_right = 500.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
max_value = 500.0
value = 500.0

[node name="BloomLabel" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 272.0
margin_right = 297.0
margin_bottom = 320.0
text = "Bloom"

[node name="BloomBtn" type="CheckButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 841.0
margin_top = 272.0
margin_right = 905.0
margin_bottom = 320.0
size_flags_horizontal = 10

[node name="BrightnessVal" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 340.0
margin_right = 297.0
margin_bottom = 388.0
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 505.0
margin_top = 340.0
margin_right = 905.0
margin_bottom = 388.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Audio" type="Tabs" parent="SettingTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 26.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="AudioSettings" type="GridContainer" parent="SettingTabs/Audio/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 930.0
margin_bottom = 509.0
custom_constants/vseparation = 20
columns = 2

[node name="MasterVolLabel" type="Label" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_right = 324.0
margin_bottom = 48.0
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_left = 505.0
margin_right = 905.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="MusicVolLabel" type="Label" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
visible = false
margin_top = 68.0
margin_right = 324.0
margin_bottom = 116.0
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
visible = false
margin_left = 505.0
margin_top = 68.0
margin_right = 905.0
margin_bottom = 116.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="SfxVolLabel" type="Label" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
visible = false
margin_top = 136.0
margin_right = 324.0
margin_bottom = 184.0
text = "SFX Volume"

[node name="SfxVolSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
visible = false
margin_left = 505.0
margin_top = 136.0
margin_right = 905.0
margin_bottom = 184.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="Gameplay" type="Tabs" parent="SettingTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 26.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Gameplay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="GameSettings" type="GridContainer" parent="SettingTabs/Gameplay/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 930.0
margin_bottom = 509.0
custom_constants/vseparation = 20
columns = 2

[node name="FovLabel" type="Label" parent="SettingTabs/Gameplay/MarginContainer/GameSettings"]
margin_right = 375.0
margin_bottom = 48.0
text = "FOV"

[node name="FovHBoxContainer" type="HBoxContainer" parent="SettingTabs/Gameplay/MarginContainer/GameSettings"]
margin_left = 447.0
margin_right = 905.0
margin_bottom = 48.0
size_flags_horizontal = 10

[node name="FovVal" type="Label" parent="SettingTabs/Gameplay/MarginContainer/GameSettings/FovHBoxContainer"]
margin_right = 54.0
margin_bottom = 48.0
text = "70"

[node name="FovSlider" type="HSlider" parent="SettingTabs/Gameplay/MarginContainer/GameSettings/FovHBoxContainer"]
margin_left = 58.0
margin_right = 458.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
value = 70.0

[node name="MouseSensLabel" type="Label" parent="SettingTabs/Gameplay/MarginContainer/GameSettings"]
margin_top = 68.0
margin_right = 375.0
margin_bottom = 116.0
text = "Mouse Sensitivity"

[node name="MouseSensHBoxContainer" type="HBoxContainer" parent="SettingTabs/Gameplay/MarginContainer/GameSettings"]
margin_left = 441.0
margin_top = 68.0
margin_right = 905.0
margin_bottom = 116.0
size_flags_horizontal = 10

[node name="MouseSensVal" type="Label" parent="SettingTabs/Gameplay/MarginContainer/GameSettings/MouseSensHBoxContainer"]
margin_right = 60.0
margin_bottom = 48.0
text = "0.1"

[node name="MouseSensSlider" type="HSlider" parent="SettingTabs/Gameplay/MarginContainer/GameSettings/MouseSensHBoxContainer"]
margin_left = 64.0
margin_right = 464.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 0.05
max_value = 3.0
step = 0.01
value = 0.1

[connection signal="item_selected" from="SettingTabs/Video/MarginContainer/VideoSettings/DisplayOptionBtn" to="." method="_on_DisplayOptionBtn_item_selected"]
[connection signal="toggled" from="SettingTabs/Video/MarginContainer/VideoSettings/VsyncBtn" to="." method="_on_VsyncBtn_toggled"]
[connection signal="toggled" from="SettingTabs/Video/MarginContainer/VideoSettings/DisplayFpsBtn" to="." method="_on_DisplayFpsBtn_toggled"]
[connection signal="value_changed" from="SettingTabs/Video/MarginContainer/VideoSettings/BloomHBoxContainer/MaxFpsSlider" to="." method="_on_MaxFpsSlider_value_changed"]
[connection signal="toggled" from="SettingTabs/Video/MarginContainer/VideoSettings/BloomBtn" to="." method="_on_BloomBtn_toggled"]
[connection signal="value_changed" from="SettingTabs/Video/MarginContainer/VideoSettings/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/AudioSettings/MasterVolSlider" to="." method="_on_MasterVolSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/AudioSettings/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/AudioSettings/SfxVolSlider" to="." method="_on_SfxVolSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Gameplay/MarginContainer/GameSettings/FovHBoxContainer/FovSlider" to="." method="_on_FovSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Gameplay/MarginContainer/GameSettings/MouseSensHBoxContainer/MouseSensSlider" to="." method="_on_MouseSensSlider_value_changed"]
